wrote swagger docs for userApi
